fix: fix main page

--- a/src/modules/FaqModule/components/FaqItems/FaqItem.module.sass
+++ b/src/modules/FaqModule/components/FaqItems/FaqItem.module.sass
@@ -2,23 +2,23 @@
     margin-bottom: 48px
     margin-top: 40px
 .accordion
-    border-radius: 8px
     width: 100%
 .accordion_item
     width: 100%
     margin-bottom: 8px
     border-radius: 8px
     border: 2px solid var(--green)
+    border-bottom: 2px solid var(--green)
+    position: relative
+    overflow: hidden
 
     .accordion_header
         display: flex
         justify-content: space-between
-        align-items: center
-        border-left: 2px solid transparent
         width: 100%
         padding: 16px
         background-color: #ffffff
-        border-radius: 8px
+        border-radius: 8px 8px 0 0
         font-size: 18px
         font-weight: 600
         text-align: left
@@ -35,20 +35,15 @@
 
             &.fullText
                 -webkit-line-clamp: unset
-                max-height: 1000px
 
         &:hover
-            //background-color: var(--grey200)
-            transition: 0.3s ease
+            transition: 0.2s ease
 
-        &.opena
+        &.open
             background-color: #ffffff
             border-bottom-left-radius: 0
             border-bottom-right-radius: 0
             opacity: 2
-            border-top: 2px solid var(--green)
-            border-left: 2px solid var(--green)
-            border-right: 2px solid var(--green)
 
     .accordion_collapse
         max-height: 0
@@ -59,10 +54,6 @@
 
         &.open
             opacity: 1
-            max-height: 1000px
-            border-bottom: 2px solid var(--green)
-            border-left: 2px solid var(--green)
-            border-right: 2px solid var(--green)
             border-bottom-left-radius: 8px
             border-bottom-right-radius: 8px
 
