--- a/src/modules/MainModule/AboutUsModule/AboutUs.module.sass
+++ b/src/modules/MainModule/AboutUsModule/AboutUs.module.sass
@@ -1,6 +1,7 @@
 .aboutUs
   margin-top: 52px
   display: flex
+  gap: 10px
   @media (max-width: 420px)
     flex-direction: column
 
@@ -10,7 +11,14 @@
     margin-top: 15px
 
 .image
+  width: 733px
+  height: 378px
+  @media (max-width: 420px)
+    width: 360px
+    height: 185px
   img
+    width: 733px
+    height: 378px
     @media (max-width: 420px)
       width: 360px
       height: 185px
