--- a/src/UI/Typography/Typography.module.sass
+++ b/src/UI/Typography/Typography.module.sass
@@ -47,6 +47,13 @@ h4
   font-weight: 500
   line-height: 24px
 
+.bodyL
+  font-family: Gilroy, "sans-serif"
+  font-size: 18px
+  font-style: normal
+  font-weight: 300
+  line-height: normal
+
 @media (max-width: 420px)
   .h1
     font-size: 28px
