--- a/src/modules/HitProductsModule/components/Slide/Slide.module.sass
+++ b/src/modules/HitProductsModule/components/Slide/Slide.module.sass
@@ -5,9 +5,9 @@
   display: flex
   flex-direction: column
   justify-content: center
+  align-items: center
   margin-top: 40px
   border-radius: 11px
-
 
 .sliderWrapper
   display: flex
@@ -18,26 +18,30 @@
 .slideContent
   border-radius: 11px
   display: flex
-  align-items: center
   justify-content: space-between
   width: 100%
   height: 426px
   object-fit: cover
-  background-color: var(--main)
+
   @media(max-width: 420px)
     flex-direction: column
 
 .slideImage
-  border-top-left-radius: 11px
-  border-bottom-left-radius: 11px
+  border-radius: 11px 0 0 11px
   width: 761px
   height: 426px
   object-fit: cover
+  img
+    object-fit: cover
+    border-radius: 11px 0 0 11px
 
 .slideText
   width: 50%
   padding: 20px
-  border-radius: 11px
+  border-radius: 0 11px 11px 0
+  background-color: #fff
+  &Title
+    margin-top: 20px
 
 .sliderButtonPrev,
 .sliderButtonNext
@@ -51,7 +55,6 @@
   cursor: pointer
   font-size: 24px
   color: #000
-  z-index: 10
 
 .sliderButtonPrev
   left: 10px
