mobile version in Main Page

--- a/src/modules/FaqModule/components/Faq/Faq.module.sass
+++ b/src/modules/FaqModule/components/Faq/Faq.module.sass
@@ -1,8 +1,11 @@
 .title
   margin-top: 80px
+  @media (max-width: 420px)
+    margin-top: 40px
 
 .accordion
     margin-bottom: 210px
     margin-top: 40px
     @media (max-width: 420px)
       margin-bottom: 47px
+      margin-top: 20px
