--- a/src/UI/container/MultiContainer.module.sass
+++ b/src/UI/container/MultiContainer.module.sass
@@ -4,19 +4,27 @@
   @media (max-width: 1024px)
     padding-left: 100px
     padding-right: 100px
-
   @media (max-width: 865px)
     padding-left: 40px
     padding-right: 40px
-
   @media (max-width: 430px)
     padding-left: 23px
     padding-right: 23px
-
-
   @media (max-width: 360px)
     padding-left: 16px
     padding-right: 16px
 
-
-
+.container
+  max-width: 1240px
+  margin: 0 auto
+  @media (max-width: 768px)
+    max-width: 768px
+    margin: 0 auto
+  @media (max-width: 600px)
+    max-width: 600px
+    margin: 0 auto
+  @media (max-width: 425px)
+    max-width: 360px
+    margin: 0 auto
+    padding-left: 8px
+    padding-right: 8px
