--- a/src/modules/FaqModule/components/FaqItems/FaqItem.module.sass
+++ b/src/modules/FaqModule/components/FaqItems/FaqItem.module.sass
@@ -11,6 +11,7 @@
     border-bottom: 2px solid var(--green)
     position: relative
     overflow: hidden
+    //background-color: #4a045e
 
     .accordion_header
         display: flex
