--- a/src/modules/HitProductsModule/components/Slide/Slide.module.sass
+++ b/src/modules/HitProductsModule/components/Slide/Slide.module.sass
@@ -8,12 +8,15 @@
   align-items: center
   margin-top: 40px
   border-radius: 11px
+  @media(max-width: 425px)
+    padding-bottom: 40px
 
 .sliderWrapper
   display: flex
   align-items: center
-  width: 1120px
+  width: 100%
   border-radius: 11px
+  flex-direction: column
 
 .slideContent
   border-radius: 11px
@@ -22,7 +25,6 @@
   width: 100%
   height: 426px
   object-fit: cover
-
   @media(max-width: 420px)
     flex-direction: column
 
@@ -32,14 +34,18 @@
   height: 426px
   object-fit: cover
   img
+    width: 761px
+    height: 426px
     object-fit: cover
     border-radius: 11px 0 0 11px
 
 .slideText
-  width: 50%
   padding: 20px
   border-radius: 0 11px 11px 0
   background-color: #fff
+  @media(width: 420px)
+    border-radius: 0 0 11px 11px
+    padding: 15px
   &Title
     margin-top: 20px
 
@@ -55,7 +61,10 @@
   cursor: pointer
   font-size: 24px
   color: #000
-
+  @media(max-width: 425px)
+    top: 87%
+    width: 50px
+    height: 50px
 .sliderButtonPrev
   left: 10px
   border-radius: 6.988px
@@ -70,6 +79,8 @@
   display: flex
   justify-content: center
   margin-top: 20px
+  @media(max-width: 425px)
+    margin-top: 40px
 
 .indicator
   width: 10px
