--- a/src/modules/HitProductsModule/components/Slide/Slide.module.sass
+++ b/src/modules/HitProductsModule/components/Slide/Slide.module.sass
@@ -25,7 +25,7 @@
   width: 100%
   height: 426px
   object-fit: cover
-  @media(max-width: 420px)
+  @media(max-width: 425px)
     flex-direction: column
 
 .slideImage
@@ -43,9 +43,6 @@
   padding: 20px
   border-radius: 0 11px 11px 0
   background-color: #fff
-  @media(width: 420px)
-    border-radius: 0 0 11px 11px
-    padding: 15px
   &Title
     margin-top: 20px
 
@@ -79,6 +76,7 @@
   display: flex
   justify-content: center
   margin-top: 20px
+  //background-color: #28441c
   @media(max-width: 425px)
     margin-top: 40px
 
