--- a/src/modules/CatalogModule/components/ProductCard/ProductCard.module.sass
+++ b/src/modules/CatalogModule/components/ProductCard/ProductCard.module.sass
@@ -5,6 +5,7 @@
   border-radius: 12px
   background: #FFF
   box-shadow: 0 1px 4px -1px rgba(28, 48, 74, 0.50)
+  margin-bottom: 24px
   &Img
     height: 252px
     width: 100%
