--- a/src/modules/MainModule/NewsMainModule/NewsMain.module.sass
+++ b/src/modules/MainModule/NewsMainModule/NewsMain.module.sass
@@ -4,6 +4,7 @@
   gap: 18px
   grid-template-areas:  "firstCard firstCard firstCard"  "secondCard thirdCard fourthCard"
   margin-top: 40px
+  margin-bottom: 24px
   @media(max-width: 420px)
     display: flex
     flex-wrap: wrap
