--- a/src/modules/NewsModule/components/NewsModal/NewsModal.module.sass
+++ b/src/modules/NewsModule/components/NewsModal/NewsModal.module.sass
@@ -1,14 +1,14 @@
 .modal
+  height: 550px
   position: fixed
   top: 50%
   left: 50%
   transform: translate(-50%, -50%)
   background-color: white
-  padding: 8px
+  padding-top: 28px
   border-radius: 10px
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1)
   z-index: 1000
-  height: 550px
   display: flex
   justify-content: center
   ::-webkit-scrollbar
@@ -21,26 +21,28 @@
   ::-webkit-scrollbar-track
     background-color: rgba(145, 145, 145, 0.50)
 
-  &Img
-    height: 519px
-    img
-      width: 100%
-      height: 100%
-      object-fit: cover
+.modalImg
+  border-radius: 16px
+  background-color: #464444
+  width: 100%
+  height: 450px
+  img
+    border-radius: 16px
+    width: 100%
+    height: 450px
+    object-fit: cover
   &Title
     margin: 32px 0 15px 0
 
 .modalContent
-  width: 865px
+  width: 800px
+  border-radius: 10px
   position: relative
   display: flex
-  justify-content: center
   flex-direction: column
-  max-height: 80vh
   overflow-y: auto
   padding-right: 61px
   padding-left: 61px
-  margin-top: 28px
 
 .closeButton
   position: absolute
@@ -50,3 +52,27 @@
   border: none
   font-size: 16px
   cursor: pointer
+
+.arrowLeft, .arrowRight
+  position: absolute
+  top: 40%
+  transform: translateY(-50%)
+  cursor: pointer
+  z-index: 1
+  background-color: var(--main)
+  width: 46px
+  height: 46px
+  border-radius: 50%
+  display: flex
+  align-items: center
+  justify-content: center
+
+.arrowLeft
+  left: 10px
+
+.arrowRight
+  right: 10px
+
+.modalTitle
+  margin-top: 32px
+  margin-bottom: 15px
