--- a/src/modules/HitProductsModule/components/Slide/Slide.module.sass
+++ b/src/modules/HitProductsModule/components/Slide/Slide.module.sass
@@ -22,7 +22,7 @@
   border-radius: 11px
   display: flex
   justify-content: space-between
-  width: 100%
+  width: 1094px
   height: 426px
   object-fit: cover
   @media(max-width: 425px)
