--- a/src/UI/Loader/Loader.module.sass
+++ b/src/UI/Loader/Loader.module.sass
@@ -8,6 +8,9 @@
     width: 200px
     height: 200px
     animation: rotate 3.5s linear infinite
+    @media (max-width: 920px)
+      width: 100px
+      height: 100px
 
 
 @keyframes rotate
