--- a/src/UI/breadcrumbs/Breadcrumbs.module.sass
+++ b/src/UI/breadcrumbs/Breadcrumbs.module.sass
@@ -5,8 +5,8 @@
     align-items: stretch
     width: auto
     gap: 4px
-    @media (max-width: 800px)
-        margin-top: 20px
+    @media (max-width: 430px)
+        display: none
 
     .breadcrumbTitle
         cursor: pointer
