--- a/src/UI/container/MultiContainer.module.sass
+++ b/src/UI/container/MultiContainer.module.sass
@@ -1,30 +1,34 @@
-.container
-  width: 1240px
-  margin: 0 auto
-  @media (max-width: 1024px)
-    padding-left: 100px
-    padding-right: 100px
-  @media (max-width: 865px)
-    padding-left: 40px
-    padding-right: 40px
-  @media (max-width: 430px)
-    padding-left: 23px
-    padding-right: 23px
-  @media (max-width: 360px)
-    padding-left: 16px
-    padding-right: 16px
+//.container
+//  width: 1240px
+//  margin: 0 auto
+//  @media (max-width: 1024px)
+//    padding-left: 100px
+//    padding-right: 100px
+//  @media (max-width: 865px)
+//    padding-left: 40px
+//    padding-right: 40px
+//  @media (max-width: 430px)
+//    padding-left: 23px
+//    padding-right: 23px
+//  @media (max-width: 360px)
+//    padding-left: 16px
+//    padding-right: 16px
 
 .container
-  max-width: 1240px
+  width: 1240px
+  //background-color: #a6a2a2
   margin: 0 auto
+  //padding: 0 20px
+  @media (max-width: 1200px)
+    width: 1200px
+    padding: 0 20px
+  @media (max-width: 1040px)
+    width: 1040px
   @media (max-width: 768px)
-    max-width: 768px
-    margin: 0 auto
+    width: 768px
   @media (max-width: 600px)
-    max-width: 600px
-    margin: 0 auto
+    width: 600px
   @media (max-width: 425px)
-    max-width: 360px
-    margin: 0 auto
-    padding-left: 8px
-    padding-right: 8px
+    width: 425px
+
+
