--- a/src/modules/NewsModule/components/NewsCard/NewsCard.module.sass
+++ b/src/modules/NewsModule/components/NewsCard/NewsCard.module.sass
@@ -3,6 +3,8 @@
   gap: 18px
   flex-wrap: wrap
   margin-top: 40px
+  @media (max-width: 1200px)
+    justify-content: center
 
   &Card
     width: 401px
@@ -25,6 +27,11 @@
   margin-top: 89px
   display: flex
   justify-content: center
+  @media (max-width: 1200px)
+    margin-top: 49px
+  @media (max-width: 1200px)
+    margin-top: 25px
+
 .newsContent
   position: absolute
   bottom: 19px
