--- a/src/UI/Typography/Typography.module.sass
+++ b/src/UI/Typography/Typography.module.sass
@@ -48,13 +48,28 @@ h4
   line-height: 24px
 
 .bodyL
-  font-family: Gilroy, "sans-serif"
-  font-size: 18px
+  color:  #151515
+  font-family: Gilroy, sans-serif
+  font-size: 20px
   font-style: normal
-  font-weight: 300
-  line-height: normal
+  font-weight: 600
+  line-height: 24px
 
-@media (max-width: 420px)
+@media (max-width: 1200px)
+  .body
+    font-size: 16px
+
+@media (max-width: 1040px)
+  .bodyL
+    font-size: 18px
+@media (max-width: 600px)
+  .body600
+    font-size: 16px
+    line-height: 18px
+  .h4
+    font-size: 18px
+    line-height: 18px
+@media (max-width: 430px)
   .h1
     font-size: 28px
 
@@ -62,7 +77,7 @@ h4
     font-size: 22px
 
   .h3
-    font-size: 18px
+    font-size: 28px
 
   .h4
     font-size: 16px
@@ -70,6 +85,8 @@ h4
   .h5
     font-size: 15px
 
+  .body600
+    font-size: 14px
 
 .main
   color: var(--main)
