--- a/src/app/styles/normalize.sass
+++ b/src/app/styles/normalize.sass
@@ -18,13 +18,14 @@ li, ul
   text-decoration: none
 
 body
+  overflow-x: hidden
   margin-top: 94px
   height: 100%
   min-width: 320px
   scroll-behavior: smooth
   background-color:  #F0EBE7
-  @media (max-width: 420px)
-    margin-top: 0
+  @media (max-width: 430px)
+    margin-top: 120px
 
 html
   overflow: -moz-scrollbars-none
