--- a/src/modules/Footer/components/Footer/Footer.module.sass
+++ b/src/modules/Footer/components/Footer/Footer.module.sass
@@ -1,21 +1,73 @@
 .footer
+  width: 100%
   background-color: var(--green)
-  padding: 50px 112px 44px 100px
-  @media(max-width: 420px)
-    padding: 20px 0 44px 0
+  display: flex
+  padding: 50px 0 44px 0
+  align-items: center
+  justify-content: center
+  @media(max-width: 768px)
+    //padding: 20px 0 24px 0
   &Content
     display: flex
-    gap: 100px
-    @media(max-width: 420px)
+    justify-content: space-between
+    @media(max-width: 768px)
       flex-direction: column
+      justify-content: center
+      align-items: center
+      gap: 40px
+    @media(max-width: 430px)
       justify-content: flex-start
-      gap: 60px
+      align-items: flex-start
+    &Logo
+      svg
+        @media(max-width: 768px)
+          width: 150px
+          height: 150px
+        @media(max-width: 430px)
+          width: 93px
+          height: 61px
 
 .navbar
   display: flex
   flex-direction: column
   gap: 24px
   margin-left: 20px
+  @media(max-width: 1040px)
+    gap: 14px
+  @media (max-width: 768px)
+    gap: 28px
 
 .navItem
   cursor: pointer
+.catalog
+  cursor: pointer
+  color:  #151515
+  font-family: Gilroy, sans-serif
+  font-size: 20px
+  font-style: normal
+  font-weight: 600
+  line-height: 24px
+  @media (max-width: 1040px)
+    font-size: 18px
+  &List
+    margin-top: 8px
+    display: flex
+    gap: 8px
+    flex-direction: column
+    @media (max-width: 1040px)
+      gap: 6px
+    @media (max-width: 768px)
+      gap: 20px
+
+    li
+      color: #151515
+      font-family: Gilroy, sans-serif
+      font-size: 20px
+      font-style: normal
+      font-weight: 400
+      line-height: 24px
+      list-style: disc
+      margin-left: 24px
+      cursor: pointer
+      @media (max-width: 1040px)
+        font-size: 18px
