--- a/src/modules/Header/components/HeaderSelect/HeaderSelect.module.sass
+++ b/src/modules/Header/components/HeaderSelect/HeaderSelect.module.sass
@@ -14,15 +14,21 @@
     display: flex
     gap: 10px
     align-items: center
+    @media(max-width: 1200px)
+      padding: 10px 10px
 
     .ArrowDownSvg
       margin-left: 8px
+      transition: transform 0.3s ease
+
+    .open
+      transform: rotate(180deg)
+
 
   .optionList
     position: absolute
     width: 62px
     height: 40px
-    //top: 110%
     left: 0
     margin-top: 4px
     padding: 0
@@ -51,6 +57,3 @@
       border-bottom-right-radius: 4px
       border-radius: 0px 0px 16px 16px
       box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25)
-
-
-
