--- a/src/modules/Header/components/SearchInput/SearchInput.module.sass
+++ b/src/modules/Header/components/SearchInput/SearchInput.module.sass
@@ -3,6 +3,11 @@
   display: flex
   align-items: center
 
+.clearIcon
+  position: absolute
+  right: 20px
+  cursor: pointer
+
 .icon
   position: absolute
   left: 10px
@@ -20,6 +25,13 @@
   border-radius: 12px
   outline: none
   font-size: 16px
+  @media(max-width: 1200px)
+    padding: 12px 8px 8px 35px
+    width: 160px
+  @media (max-width: 1028px)
+    font-size: 16px
+    width: 200px
+    padding: 10px 10px 10px 35px
 
   &::placeholder
     color: var(--grey100)
