--- a/src/modules/HitProductsModule/components/Slide/Slide.module.sass
+++ b/src/modules/HitProductsModule/components/Slide/Slide.module.sass
@@ -14,37 +14,49 @@
 .sliderWrapper
   display: flex
   align-items: center
-  width: 100%
   border-radius: 11px
   flex-direction: column
+  background-color: #4f0f0f
 
 .slideContent
   border-radius: 11px
   display: flex
   justify-content: space-between
-  width: 1094px
-  height: 426px
+  width: 100%
+  //height: 426px
   object-fit: cover
-  @media(max-width: 425px)
+  @media(max-width: 900px)
     flex-direction: column
+    justify-content: center
+    align-items: center
 
 .slideImage
   border-radius: 11px 0 0 11px
-  width: 761px
+  width: 760px
   height: 426px
-  object-fit: cover
+  overflow: hidden
+  @media(max-width: 900px)
+    border-radius: 11px 11px 0 0
+    height: 223px
+    width: 100%
   img
-    width: 761px
-    height: 426px
+    width: 100%
+    height: 100%
     object-fit: cover
     border-radius: 11px 0 0 11px
+    @media(max-width: 900px)
+      border-radius: 11px 11px 0 0
 
 .slideText
   padding: 20px
   border-radius: 0 11px 11px 0
-  background-color: #fff
-  &Title
-    margin-top: 20px
+  background-color: var(--main)
+  width: 333px
+  @media(max-width: 900px)
+    width: 100%
+    border-radius: 0 0 11px 11px
+  //&Title
+  //  margin-top: 20px
 
 .sliderButtonPrev,
 .sliderButtonNext
@@ -58,7 +70,7 @@
   cursor: pointer
   font-size: 24px
   color: #000
-  @media(max-width: 425px)
+  @media(max-width: 900px)
     top: 87%
     width: 50px
     height: 50px
