--- a/src/modules/MainModule/AboutUsModule/AboutUs.module.sass
+++ b/src/modules/MainModule/AboutUsModule/AboutUs.module.sass
@@ -2,16 +2,18 @@
   margin-top: 52px
   align-items: center
   display: flex
-  width: 100%
-  max-width: 1209px
-  @media (max-width: 420px)
+  @media (max-width: 950px)
     flex-direction: column
     margin-top: 39px
   &Title
     margin-bottom: 40px
-    @media (max-width: 420px)
+    @media (max-width: 950px)
       margin-bottom: 20px
   &Content
+    width: 559px
+    max-width: 100%
+    &Text
+      width: 100%
     p
       color: #000
       font-family: Gilroy, "sans-serif"
@@ -20,13 +22,16 @@
       font-weight: 500
       line-height: 24px
     @media (max-width: 420px)
-      font-size: 0.9rem
-      word-wrap: break-word
+      font-size: 16px
+
 
 .image
+  height: 378px
+  overflow: hidden
+  @media (max-width: 950px)
+    margin-top: 16px
   img
-    width: 733px
-    height: 378px
-    @media (max-width: 420px)
-      width: 360px
-      height: 185px
+    width: 100%
+    height: 100%
+    object-fit: cover
+
