--- a/src/modules/MainModule/BannerModule/Banner.module.sass
+++ b/src/modules/MainModule/BannerModule/Banner.module.sass
@@ -1,9 +1,23 @@
 .banner
-  background-image: url("../../../assets/Image/Background.webp")
-  background-size: cover
-  background-repeat: no-repeat
+  //min-height: 200px
+  //max-width: 100%
   height: 100vh
-  @media (max-width: 420px)
-    background-position: top center
-    height: 120vh
+  color: var(--bg-white)
+  margin-bottom: var(--margin)
+  overflow: hidden
+  .video, .image
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
+    object-fit: cover
+    z-index: 1
+  .overlay
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
+
+@media (max-width: 480px)
+  .banner
 
