--- a/src/modules/NewsModule/components/NewsModal/NewsModal.module.sass
+++ b/src/modules/NewsModule/components/NewsModal/NewsModal.module.sass
@@ -1,5 +1,6 @@
 .modal
   height: 550px
+  padding-bottom: 20px
   position: fixed
   top: 50%
   left: 50%
@@ -11,6 +12,11 @@
   z-index: 1000
   display: flex
   justify-content: center
+  @media (max-width: 1200px)
+    height: 450px
+  @media (max-width: 600px)
+    height: 350px
+    padding-top: 18px
   ::-webkit-scrollbar
     margin: 0 20px
     width: 5px
@@ -26,11 +32,19 @@
   background-color: #464444
   width: 100%
   height: 450px
+  @media (max-width: 1200px)
+    height: 350px
+  @media (max-width: 600px)
+    height: 206px
   img
     border-radius: 16px
     width: 100%
     height: 450px
     object-fit: cover
+    @media (max-width: 1200px)
+      height: 350px
+    @media (max-width: 600px)
+      height: 206px
   &Title
     margin: 32px 0 15px 0
 
@@ -43,6 +57,12 @@
   overflow-y: auto
   padding-right: 61px
   padding-left: 61px
+  @media (max-width: 1200px)
+    width: 600px
+  @media (max-width: 600px)
+    padding-right: 18px
+    padding-left: 18px
+    width: 400px
 
 .closeButton
   position: absolute
@@ -52,6 +72,10 @@
   border: none
   font-size: 16px
   cursor: pointer
+  @media (max-width: 600px)
+    right: 25px
+    top: 6px
+
 
 .arrowLeft, .arrowRight
   position: absolute
@@ -66,6 +90,10 @@
   display: flex
   align-items: center
   justify-content: center
+  @media (max-width: 600px)
+    top: 35%
+    width: 30px
+    height: 30px
 
 .arrowLeft
   left: 10px
@@ -76,3 +104,6 @@
 .modalTitle
   margin-top: 32px
   margin-bottom: 15px
+  @media(max-width: 600px)
+    margin-top: 12px
+    margin-bottom: 12px
