--- a/src/pages/catalogPage/CatalogPage.module.sass
+++ b/src/pages/catalogPage/CatalogPage.module.sass
@@ -3,6 +3,9 @@
   gap: 20px
   margin-top: 32px
   flex-wrap: wrap
+  margin-bottom: 32px
+  @media (max-width: 1200px)
+    justify-content: center
 
 .catalogBlock
   margin-bottom: 80px
@@ -13,3 +16,6 @@
 .title
   margin-top: 32px
   text-align: center
+  //@media (max-width: 430px)
+  //  margin-top: 125px
+
