--- a/src/modules/Footer/components/Footer/Footer.module.sass
+++ b/src/modules/Footer/components/Footer/Footer.module.sass
@@ -1,12 +1,12 @@
 .footer
-  width: 100%
-  background-color: var(--green)
   display: flex
   padding: 50px 0 44px 0
   align-items: center
   justify-content: center
   @media(max-width: 768px)
-    //padding: 20px 0 24px 0
+    padding: 20px 0 24px 0
+  @media(max-width: 460px)
+    width: 460px
   &Content
     display: flex
     justify-content: space-between
