--- a/src/modules/MainModule/BannerModule/Banner.module.sass
+++ b/src/modules/MainModule/BannerModule/Banner.module.sass
@@ -1,17 +1,23 @@
 .banner
-  //min-height: 200px
-  //max-width: 100%
+  position: relative
   height: 100vh
+  width: 100%
   color: var(--bg-white)
   margin-bottom: var(--margin)
   overflow: hidden
+  @media (max-width: 460px)
+    //margin-top: -60px
+    width: 430px
   .video, .image
+    position: absolute
     top: 0
     left: 0
     width: 100%
     height: 100%
     object-fit: cover
-    z-index: 1
+    img
+      @media (max-width: 460px)
+        width: 430px
   .overlay
     top: 0
     left: 0
