--- a/src/modules/MainModule/HazelnutModule/HazelnutModule.module.sass
+++ b/src/modules/MainModule/HazelnutModule/HazelnutModule.module.sass
@@ -1,11 +1,11 @@
-
 .nut
   position: relative
   display: flex
   margin-bottom: 400px
-
+  @media (max-width: 600px)
+    overflow: hidden
+    margin-bottom: 0
 .nutCardContainer
-  //overflow: hidden
   position: absolute
   top: 80%
   left: 90%
@@ -13,8 +13,7 @@
   display: flex
   align-items: center
   justify-content: center
-  //overflow: visible
-  transition: width 1.5s ease, height 1.5s ease
+  transition: width 0.1s ease, height 0.1s ease
 
 .nutCard
   position: absolute
@@ -37,34 +36,14 @@
 .img
   transition: width 1.5s ease, transform 1.5s ease
 
-@media (max-width: 420px)
-  .nutCardContainer
-    top: 40%
-    width: 510px
-    height: 501px
-
-  .nutCard
-    width: 510px
-    height: 501px
-    border: 25px solid var(--main)
-
-  //.nutCard img
-  //  transform: rotate(calc(var(--angle) * 360deg / var(--total) - var(--rotation)deg)) translateX(-200px) rotate(calc(-var(--angle) * 360deg / var(--total) - var(--rotation)deg))
-
-  .img
-    width: var(--img-width)
-
-  .nutContent
-    width: 535px
-
 .nutContent
   margin-top: 510px
   width: 550px
   transition: all 1.5s ease
-  @media (max-width: 420px)
-    margin-top: 600px
-  &Text
-    margin-top: 24px
+  @media (max-width: 460px)
+    margin-top: 700px
+    height: 300px
+
 
 .recipeBtn
   margin-top: 25px
@@ -83,8 +62,27 @@
   font-style: normal
   font-weight: 500
   line-height: 24px
-  @media (max-width: 420px)
+  @media (max-width: 460px)
     width: 129px
     padding: 8px 16px
     font-size: 15px
 
+@media (max-width: 768px)
+  .nutCardContainer
+    top: 40%
+    width: 510px
+    height: 501px
+
+  .nutCard
+    width: 510px
+    height: 501px
+    border: 25px solid var(--main)
+
+  .nutCard img
+    transform: rotate(calc((var(--angle) * 360deg) / var(--total) - var(--rotation))) translateX(-200px) rotate(calc(var(--angle) * 360deg / var(--total) - var(--rotation)))deg
+
+  .img
+    width: var(--img-width)
+
+  .nutContent
+    width: 535px
