--- a/src/UI/container/MultiContainer.module.sass
+++ b/src/UI/container/MultiContainer.module.sass
@@ -20,13 +20,18 @@
   @media (max-width: 1200px)
     width: 1200px
     padding: 0 20px
+    margin: 0 auto
   @media (max-width: 1040px)
+    margin: 0 auto
     width: 1040px
   @media (max-width: 768px)
+    margin: 0 auto
     width: 768px
   @media (max-width: 600px)
+    margin: 0 auto
     width: 600px
   @media (max-width: 425px)
+    margin: 0 auto
     width: 425px
 
 
