--- a/src/modules/MainModule/BannerModule/Banner.module.sass
+++ b/src/modules/MainModule/BannerModule/Banner.module.sass
@@ -5,23 +5,25 @@
   color: var(--bg-white)
   margin-bottom: var(--margin)
   overflow: hidden
-  @media (max-width: 460px)
-    //margin-top: -60px
-    width: 430px
-  .video, .image
+  background-position: center
+  background-size: cover
+  background-repeat: no-repeat
+
+  //@media (max-width: 460px)
+  //  width: 430px
+
+  .video
     position: absolute
     top: 0
     left: 0
     width: 100%
     height: 100%
     object-fit: cover
-    img
-      @media (max-width: 460px)
-        width: 430px
+
   .overlay
+    position: absolute
     top: 0
     left: 0
     width: 100%
     height: 100%
-
-
+    background: rgba(0, 0, 0, 0.5)
