--- a/src/UI/container/MultiContainer.module.sass
+++ b/src/UI/container/MultiContainer.module.sass
@@ -1,37 +1,20 @@
-//.container
-//  width: 1240px
-//  margin: 0 auto
-//  @media (max-width: 1024px)
-//    padding-left: 100px
-//    padding-right: 100px
-//  @media (max-width: 865px)
-//    padding-left: 40px
-//    padding-right: 40px
-//  @media (max-width: 430px)
-//    padding-left: 23px
-//    padding-right: 23px
-//  @media (max-width: 360px)
-//    padding-left: 16px
-//    padding-right: 16px
-
 .container
   width: 1240px
   margin: 0 auto
   @media (max-width: 1200px)
-    width: 1200px
+    width: 100%
     padding: 0 20px
-    margin: 0 auto
   @media (max-width: 1040px)
-    margin: 0 auto
-    width: 1040px
+    width: 100%
   @media (max-width: 768px)
-    margin: 0 auto
-    width: 768px
+    width: 100%
   @media (max-width: 600px)
-    margin: 0 auto
-    width: 600px
-  @media (max-width: 425px)
-    margin: 0 auto
-    width: 425px
+    width: 100%
+  @media (max-width: 460px)
+    width: 100%
+
+
+
+
 
 
