--- a/src/modules/HitProductsModule/components/Slide/Slide.module.sass
+++ b/src/modules/HitProductsModule/components/Slide/Slide.module.sass
@@ -55,8 +55,7 @@
   @media(max-width: 900px)
     width: 100%
     border-radius: 0 0 11px 11px
-  //&Title
-  //  margin-top: 20px
+
 
 .sliderButtonPrev,
 .sliderButtonNext
@@ -71,6 +70,7 @@
   font-size: 24px
   color: #000
   @media(max-width: 900px)
+    font-size: 30px
     top: 87%
     width: 50px
     height: 50px
@@ -88,7 +88,6 @@
   display: flex
   justify-content: center
   margin-top: 20px
-  //background-color: #28441c
   @media(max-width: 425px)
     margin-top: 40px
 
