--- a/src/app/styles/normalize.sass
+++ b/src/app/styles/normalize.sass
@@ -5,6 +5,7 @@
   text-decoration: none
   list-style: none
   border: none
+  outline: none
   font-size: 16px
   font-weight: 400
   font-family: "Inter", sans-serif
@@ -22,6 +23,10 @@ body
   height: 100%
   min-width: 320px
   scroll-behavior: smooth
+  background-color: #F0EBE7
+  @media (max-width: 430px)
+    margin-top: 120px
+
 html
   overflow: -moz-scrollbars-none
   -ms-overflow-style: none
