--- a/src/app/styles/normalize.sass
+++ b/src/app/styles/normalize.sass
@@ -23,6 +23,7 @@ body
   height: 100%
   min-width: 320px
   scroll-behavior: smooth
+  color: black
   background-color: #F0EBE7
   @media (max-width: 430px)
     margin-top: 120px
