--- a/src/modules/HitProductsModule/components/Slide/Slide.module.sass
+++ b/src/modules/HitProductsModule/components/Slide/Slide.module.sass
@@ -16,14 +16,12 @@
   align-items: center
   border-radius: 11px
   flex-direction: column
-  background-color: #4f0f0f
 
 .slideContent
   border-radius: 11px
   display: flex
   justify-content: space-between
   width: 100%
-  //height: 426px
   object-fit: cover
   @media(max-width: 900px)
     flex-direction: column
@@ -53,6 +51,7 @@
   background-color: var(--main)
   width: 333px
   @media(max-width: 900px)
+    margin-bottom: 20px
     width: 100%
     border-radius: 0 0 11px 11px
 
