--- a/src/app/styles/normalize.sass
+++ b/src/app/styles/normalize.sass
@@ -17,8 +17,9 @@ a, button
 li, ul
   list-style: none
   text-decoration: none
-  color: black
 
+p
+  color: black
 body
   overflow-x: hidden
   margin-top: 94px
