--- a/src/modules/MainModule/BannerModule/Banner.module.sass
+++ b/src/modules/MainModule/BannerModule/Banner.module.sass
@@ -8,6 +8,9 @@
   background-position: center
   background-size: cover
   background-repeat: no-repeat
+  @media(max-width: 460px)
+    margin-top: -30px
+    height: 700px
   .video
     position: absolute
     top: 0
@@ -15,7 +18,6 @@
     width: 100%
     height: 100%
     object-fit: cover
-
   .overlay
     position: absolute
     top: 0
