add last changes

--- a/src/modules/MainModule/HazelnutModule/HazelnutModule.module.sass
+++ b/src/modules/MainModule/HazelnutModule/HazelnutModule.module.sass
@@ -2,8 +2,8 @@
   position: relative
   display: flex
   margin-bottom: 400px
-  @media (max-width: 600px)
-    overflow: hidden
+  @media (max-width: 1150px)
+    //overflow-x: hidden
     margin-bottom: 0
 .nutCardContainer
   position: absolute
@@ -40,7 +40,7 @@
   margin-top: 510px
   width: 550px
   transition: all 1.5s ease
-  @media (max-width: 460px)
+  @media (max-width: 700px)
     margin-top: 700px
     height: 300px
 
@@ -89,7 +89,7 @@
   ul, ol, li
     margin-left: 20px
 
-@media (max-width: 768px)
+@media (max-width: 1150px)
   .nutCardContainer
     top: 40%
     width: 510px
