--- a/src/app/styles/normalize.sass
+++ b/src/app/styles/normalize.sass
@@ -3,8 +3,8 @@
   padding: 0
   box-sizing: border-box
   text-decoration: none
-  //border: none
-  border: 0.5px solid black
+  border: none
+  //border: 0.5px solid black
   outline: none
   font-size: 16px
   font-weight: 400
