add last changes

--- a/src/app/styles/normalize.sass
+++ b/src/app/styles/normalize.sass
@@ -21,9 +21,10 @@ body
   min-width: 320px
   scroll-behavior: smooth
   background-color: #F0EBE7
-  font-family: Gabriola
+
 
 html
+  overflow-x: hidden
   overflow: -moz-scrollbars-none
   -ms-overflow-style: none
 
