--- a/src/UI/Typography/Typography.module.sass
+++ b/src/UI/Typography/Typography.module.sass
@@ -67,6 +67,10 @@ h4
   .body600
     font-size: 16px
     line-height: 18px
+
+  .h2
+    font-size: 30px
+
   .h4
     font-size: 18px
     line-height: 18px
