--- a/src/modules/Header/components/HeaderSelect/HeaderSelect.module.sass
+++ b/src/modules/Header/components/HeaderSelect/HeaderSelect.module.sass
@@ -16,6 +16,8 @@
     align-items: center
     @media(max-width: 1200px)
       padding: 10px 10px
+    @media(max-width: 430px)
+      gap: 0
 
     .ArrowDownSvg
       margin-left: 8px
