--- a/src/pages/catalogPage/CatalogPage.module.sass
+++ b/src/pages/catalogPage/CatalogPage.module.sass
@@ -17,4 +17,8 @@
   margin-top: 32px
   text-align: center
 
+.catalogDetail
+  margin-bottom: 80px
+  @media (max-width: 460px)
+    margin-top: 45px
 
