--- a/src/modules/Header/components/Header/Header.module.sass
+++ b/src/modules/Header/components/Header/Header.module.sass
@@ -5,6 +5,7 @@
   align-items: center
   justify-content: center
   background-color: #fff
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25)
   position: fixed
   top: 0
   z-index: 1
