--- a/src/modules/MainModule/NewsMainModule/NewsMain.module.sass
+++ b/src/modules/MainModule/NewsMainModule/NewsMain.module.sass
@@ -13,6 +13,15 @@
   grid-area: firstCard
   height: 613px
   width: 100%
+  @media (max-width: 1150px)
+    height: 400px
+  @media (max-width: 460px)
+    height: 240px
+  img
+    @media (max-width: 1150px)
+      height: 400px
+    @media (max-width: 460px)
+      height: 240px
 
 .newsCard
   position: relative
@@ -44,6 +53,15 @@
   font-weight: 200
   line-height: normal
 
-
+.squareCard
+  height: 401px
+  width: 100%
+  @media (max-width: 460px)
+    height: 240px
+  img
+    width: 100%
+    height: 401px
+    @media (max-width: 460px)
+      height: 240px
 
 
