--- a/src/modules/NewsModule/components/NewsCard/NewsCard.module.sass
+++ b/src/modules/NewsModule/components/NewsCard/NewsCard.module.sass
@@ -3,8 +3,11 @@
   gap: 18px
   flex-wrap: wrap
   margin-top: 40px
+  margin-bottom: 80px
   @media (max-width: 1200px)
     justify-content: center
+  @media (max-width: 460px)
+    margin-top: 45px
 
   &Card
     width: 401px
