--- a/src/modules/RecipeModule/Recipe.module.sass
+++ b/src/modules/RecipeModule/Recipe.module.sass
@@ -1,23 +1,23 @@
 .recipe
   margin-top: 63px
   margin-bottom: 116px
-  @media (max-width: 430px)
+  @media (max-width: 460px)
     margin-top: 36px
   &Image
     height: 505px
-    @media (max-width: 430px)
+    @media (max-width: 460px)
        height: 185px
     img
-      max-width: 100%
+      width: 100%
+      height: 505px
       object-fit: cover
-      @media (max-width: 430px)
-        //width: 320px
+      @media (max-width: 460px)
         width: 100%
         height: 185px
 
   &Title
     margin-top: 49px
-    @media (max-width: 430px)
+    @media (max-width: 460px)
       margin-top: 24px
 
   &Content
@@ -26,7 +26,7 @@
     justify-content: flex-end
     align-items: flex-end
     flex-direction: column
-    @media (max-width: 430px)
+    @media (max-width: 460px)
       padding: 0
   &Text
     margin-top: 40px
@@ -36,9 +36,9 @@
     font-style: normal
     font-weight: 400
     line-height: 180%
-    @media (max-width: 430px)
+    @media (max-width: 460px)
       font-size: 14px
-    @media (max-width: 430px)
+    @media (max-width: 460px)
       margin-top: 18px
     p, li, strong, h1, h2, h3, h4, h5, h6, i, ul, ol
       color: #000
@@ -47,7 +47,7 @@
       font-style: normal
       font-weight: 400
       line-height: 180%
-      @media (max-width: 430px)
+      @media (max-width: 460px)
         font-size: 14px
     ul, ol, li
       margin-left: 20px
@@ -67,7 +67,7 @@
     font-style: normal
     font-weight: 400
     line-height: 20px
-    @media (max-width: 430px)
+    @media (max-width: 460px)
       font-size: 16px
       padding: 14px 16px
 
