fix: fix Logo in Footer

--- a/src/modules/Footer/components/Footer/Footer.module.sass
+++ b/src/modules/Footer/components/Footer/Footer.module.sass
@@ -17,6 +17,8 @@
       align-items: flex-start
     &Logo
       svg
+        width: 175px
+        height: 114px
         @media(max-width: 768px)
           width: 150px
           height: 150px
