--- a/src/modules/RecipeModule/Recipe.module.sass
+++ b/src/modules/RecipeModule/Recipe.module.sass
@@ -4,10 +4,12 @@
   @media (max-width: 460px)
     margin-top: 36px
   &Image
+    border-radius: 15px
     height: 505px
     @media (max-width: 460px)
        height: 185px
     img
+      border-radius: 15px
       width: 100%
       height: 505px
       object-fit: cover
